removed usage of deprecated new URL()